Fix text alignment for middle sections on mobile

--- a/Lab2/index.css
+++ b/Lab2/index.css
@@ -209,6 +209,14 @@ h1,h2 {
     width: 45%;
   }
 
+  .Section-par h1 {
+    text-align: center;
+  }
+
+  .Section-par p {
+    text-align: left;
+  }
+
   .mid {
     vertical-align: top;
     margin-top: 30px;
